--- a/gensql.cabal
+++ b/gensql.cabal
@@ -30,6 +30,7 @@ executable gensql
                      , lens-aeson
                      , mtl
                      , text
+                     , unordered-containers
                      , yaml
   default-language:    Haskell2010
 
