--- a/postgres-subset.cabal
+++ b/postgres-subset.cabal
@@ -1,14 +1,14 @@
-name:                gensql
+name:                postgres-subset
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
 homepage:            https://github.com/githubuser/gensql#readme
-license:             BSD3
+license:             AllRightsReserved
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author name here
-category:            Web
+author:              Ben Clifford
+maintainer:          ben@beautifuldestinations.com
+copyright:           2016 Beautiful Destinations
+category:            Database
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
@@ -19,13 +19,13 @@ library
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-executable gensql
+executable postgres-subset
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       aeson
                      , base
-                     , gensql
+                     , postgres-subset
                      , lens
                      , lens-aeson
                      , mtl
@@ -34,12 +34,12 @@ executable gensql
                      , yaml
   default-language:    Haskell2010
 
-test-suite gensql-test
+test-suite postgres-subset-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , gensql
+                     , postgres-subset
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
