partial ordering by requires, multiple requires

--- a/postgres-subset.cabal
+++ b/postgres-subset.cabal
@@ -31,6 +31,7 @@ executable postgres-subset
                      , mtl
                      , text
                      , unordered-containers
+                     , vector
                      , yaml
   default-language:    Haskell2010
 
