--- a/postgres-subset.cabal
+++ b/postgres-subset.cabal
@@ -25,11 +25,13 @@ executable postgres-subset
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       aeson
                      , base
+                     , bytestring
                      , postgres-subset
                      , lens
                      , lens-aeson
                      , mtl
                      , optparse-applicative
+                     , postgresql-simple
                      , text
                      , unordered-containers
                      , vector
