Make 'progress' work in any MonadIO

--- a/postgres-subset.cabal
+++ b/postgres-subset.cabal
@@ -33,6 +33,7 @@ executable postgres-subset
                      , optparse-applicative
                      , postgresql-simple
                      , text
+                     , transformers
                      , unordered-containers
                      , vector
                      , yaml
