--- a/postgres-subset.cabal
+++ b/postgres-subset.cabal
@@ -37,6 +37,7 @@ executable postgres-subset
                      , unordered-containers
                      , vector
                      , yaml
+                     , tagged
   default-language:    Haskell2010
 
 source-repository head
